// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots PureTaskListComponent Default 1`] = `
<storybook-wrapper>
  <div
    style="margin: 3em"
  >
    <pure-app-task-list
      ng-reflect-tasks="[object Object],[object Object"
    >
      <div
        class="list-items"
      >
        
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item"
          >
            <input
              readonly="true"
              type="text"
            />
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item"
          >
            <input
              readonly="true"
              type="text"
            />
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item"
          >
            <input
              readonly="true"
              type="text"
            />
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item"
          >
            <input
              readonly="true"
              type="text"
            />
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item"
          >
            <input
              readonly="true"
              type="text"
            />
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item"
          >
            <input
              readonly="true"
              type="text"
            />
          </div>
        </app-task>
        
        
      </div>
    </pure-app-task-list>
  </div>
</storybook-wrapper>
`;

exports[`Storyshots PureTaskListComponent Empty 1`] = `
<storybook-wrapper>
  <div
    style="margin: 3em"
  >
    <pure-app-task-list
      ng-reflect-loading="false"
      ng-reflect-tasks=""
    >
      <div
        class="list-items"
      >
        
        
        <div
          class="wrapper-message"
        >
          <span
            class="icon-check"
          />
          <div
            class="title-message"
          >
            You have no tasks
          </div>
          <div
            class="subtitle-message"
          >
            Sit back and relax
          </div>
        </div>
        
      </div>
    </pure-app-task-list>
  </div>
</storybook-wrapper>
`;

exports[`Storyshots PureTaskListComponent Loading 1`] = `
<storybook-wrapper>
  <div
    style="margin: 3em"
  >
    <pure-app-task-list
      ng-reflect-loading="true"
      ng-reflect-tasks=""
    >
      <div
        class="list-items"
      >
        
        
        
        <div>
          
          <div
            class="loading-item"
          >
            <span
              class="glow-checkbox"
            />
            <span
              class="glow-text"
            >
              <span>
                Loading
              </span>
              <span>
                cool
              </span>
              <span>
                state
              </span>
            </span>
          </div>
          <div
            class="loading-item"
          >
            <span
              class="glow-checkbox"
            />
            <span
              class="glow-text"
            >
              <span>
                Loading
              </span>
              <span>
                cool
              </span>
              <span>
                state
              </span>
            </span>
          </div>
          <div
            class="loading-item"
          >
            <span
              class="glow-checkbox"
            />
            <span
              class="glow-text"
            >
              <span>
                Loading
              </span>
              <span>
                cool
              </span>
              <span>
                state
              </span>
            </span>
          </div>
          <div
            class="loading-item"
          >
            <span
              class="glow-checkbox"
            />
            <span
              class="glow-text"
            >
              <span>
                Loading
              </span>
              <span>
                cool
              </span>
              <span>
                state
              </span>
            </span>
          </div>
          <div
            class="loading-item"
          >
            <span
              class="glow-checkbox"
            />
            <span
              class="glow-text"
            >
              <span>
                Loading
              </span>
              <span>
                cool
              </span>
              <span>
                state
              </span>
            </span>
          </div>
          <div
            class="loading-item"
          >
            <span
              class="glow-checkbox"
            />
            <span
              class="glow-text"
            >
              <span>
                Loading
              </span>
              <span>
                cool
              </span>
              <span>
                state
              </span>
            </span>
          </div>
        </div>
      </div>
    </pure-app-task-list>
  </div>
</storybook-wrapper>
`;

exports[`Storyshots PureTaskListComponent With Pinned Tasks 1`] = `
<storybook-wrapper>
  <div
    style="margin: 3em"
  >
    <pure-app-task-list
      ng-reflect-tasks="[object Object],[object Object"
    >
      <div
        class="list-items"
      >
        
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item"
          >
            <input
              readonly="true"
              type="text"
            />
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item"
          >
            <input
              readonly="true"
              type="text"
            />
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item"
          >
            <input
              readonly="true"
              type="text"
            />
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item"
          >
            <input
              readonly="true"
              type="text"
            />
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item"
          >
            <input
              readonly="true"
              type="text"
            />
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item"
          >
            <input
              readonly="true"
              type="text"
            />
          </div>
        </app-task>
        
        
      </div>
    </pure-app-task-list>
  </div>
</storybook-wrapper>
`;

exports[`Storyshots Task Archived 1`] = `
<storybook-wrapper>
  <app-task
    ng-reflect-task="[object Object]"
  >
    <div
      class="list-item"
    >
      <input
        readonly="true"
        type="text"
      />
    </div>
  </app-task>
</storybook-wrapper>
`;

exports[`Storyshots Task Default 1`] = `
<storybook-wrapper>
  <app-task
    ng-reflect-task="[object Object]"
  >
    <div
      class="list-item"
    >
      <input
        readonly="true"
        type="text"
      />
    </div>
  </app-task>
</storybook-wrapper>
`;

exports[`Storyshots Task Pinned 1`] = `
<storybook-wrapper>
  <app-task
    ng-reflect-task="[object Object]"
  >
    <div
      class="list-item"
    >
      <input
        readonly="true"
        type="text"
      />
    </div>
  </app-task>
</storybook-wrapper>
`;
